@@ -55,6 +55,9 @@ _GLIBCXX_BEGIN_NAMESPACE_VERSION
   };
 
 #ifdef __cpp_lib_concepts
+// Define this here, included by all the headers that need to define it.
+#define __cpp_lib_ranges 201911L
+
 namespace ranges
 {
   namespace __detail
